# ANN-Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/: ActivationFunction.h  Layer.h  NeuralNetwork.h  Neuron.h
src/: ActivationFunction.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  export.cpp  export.h
test/: mybenchmark  simd.cpp
